# openedu-near-contracts

./: README.md  package.json
.github/workflows/: rust.yml
integration-tests/: Cargo.toml
integration-tests/src/: helpers.rs  launchpad.rs
launchpad/src/application/repository/: mod.rs
launchpad/src/application/services/infrastructure/: get_launchpad.rs  impl_launchpad.rs  mod.rs
near/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
near/course-launchpad/: Cargo.toml
near/course_launchpad/: Cargo.toml  README.md
near/course_launchpad/src/: lib.rs
near/course_launchpad/src/pool/: actions.rs  enums.rs  mod.rs  models.rs
near/course_launchpad/src/pool/ft_request/: external.rs
near/course_launchpad/src/utils/: mod.rs
near/course_launchpad/tests/: unit_tests.rs
near/integration-tests/src/: helpers.rs  launchpad.rs
near/launchpad/: Cargo.toml
near/launchpad/src/: lib.rs
near/launchpad/src/application/: mod.rs
near/launchpad/src/application/services/: mod.rs
near/launchpad/src/application/services/enumeration/: enum_launchpad.rs  mod.rs
near/launchpad/src/application/services/infrastructure/: get_launchpad.rs  impl_launchpad.rs  impl_pool.rs  mod.rs
near/launchpad/src/models/: contract.rs  mod.rs
near/launchpad/src/models/ft_request/: external.rs
near/nft_25519/: Cargo.toml  Makefile.toml
near/nft_25519/src/: lib.rs
near/payment/src/: lib.rs
near/payment/src/application/services/enumeration/: enum_payment.rs
near/payment/src/models/: contract.rs  mod.rs
near/res/: ft_token.wasm  launchpad.wasm  payment.wasm
near/scripts/: build.sh
near/treasury/: Cargo.toml
near/treasury/src/: lib.rs
near/treasury/src/application/services/enumeration/: enum_treasury.rs  mod.rs
near/treasury/src/application/services/infrastructure/: impl_treasury.rs  mod.rs
near/treasury/src/models/: contract.rs
nft_25519/: Cargo.toml
nft_25519/src/: lib.rs
payment/: Cargo.toml
payment/src/application/services/enumeration/: mod.rs
payment/src/application/services/infrastructure/: impl_payment.rs  mod.rs
scripts/: build.sh
