[package]
name = "course_launchpad"
description = "cargo-near-new-project-description"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/<xxx>/<xxx>"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.6", features = ["legacy", "abi"] }
borsh = "1.3.0"  # Added borsh
serde = { version = "1.0", features = ["derive"] }  # Added serde

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }
near-workspaces = { version = "0.15", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.12.1-rust-1.82.0"
image_digest = "sha256:841e72af53e151e3d8f65ef2e50dcec162699d876348a8ec0e77b6cdede667d9"
passed_env = []
container_build_command = ["cargo", "near", "build"] 