[package]
name = "launchpad"
edition = "2021"
version = "0.1.0"
license = "MIT"
description = "The Contract for Joygi platform"

[lib]
crate-type = ["cdylib"]


[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
near-units = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"